added instruction about setup ip

--- a/.env.sample
+++ b/.env.sample
@@ -2,4 +2,6 @@ PORT=3000
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 
-## replace to your postgresql username & password here 
+
+## - replace to your postgresql username & password here 
+## - replace from localhost to ip address of the postgres container, you can refer this blog https://ppal.hashnode.dev/setting-up-postgresql-with-docker#heading-open-pgadmin
